# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md
public/: .eslintrc.js  index.html  index.js  package-lock.json  package.json
src/: lib.rs
src/automaton/: mod.rs  rules.rs
tests/: web.rs
