[package]
name = "wasm-game-of-life"
description = "Conway's Game of Life simulated in Rust and JavaScript using WebAssembly."
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/wasm-game-of-life"
readme = "README.md"
keywords = ["wasm", "webassembly", "game-of-life"]
categories = ["wasm", "games"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0"
wasm-bindgen = "0"

console_error_panic_hook = { version = "0", optional = true }
web-sys = { version = "0", features = [ "console" ] }
wee_alloc = { version = "0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
